Update docker-compose to relay credentials and timezone

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,26 @@
 version: "3.9"
-
-# StorePing — VPS Deployment
+# Relay — VPS Deployment
 # Run with: docker compose up -d
 #
 # Services:
 #   db      — PostgreSQL
 #   api     — FastAPI event receiver (port 8000)
 #   bot     — Telegram bot (polling)
-
 services:
-
   db:
     image: postgres:16-alpine
     restart: always
     environment:
-      POSTGRES_DB:       storeping
-      POSTGRES_USER:     storeping_user
+      POSTGRES_DB:       relay
+      POSTGRES_USER:     relay_user
       POSTGRES_PASSWORD: ${DB_PASS}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U storeping_user -d storeping"]
+      test: ["CMD-SHELL", "pg_isready -U relay_user -d relay"]
       interval: 10s
       timeout: 5s
       retries: 5
-
   api:
     build: .
     restart: always
@@ -34,33 +30,32 @@ services:
     environment:
       DB_HOST:     db
       DB_PORT:     "5432"
-      DB_NAME:     storeping
-      DB_USER:     storeping_user
+      DB_NAME:     relay
+      DB_USER:     relay_user
       DB_PASS:     ${DB_PASS}
       BOT_TOKEN:   ${BOT_TOKEN}
       API_SECRET:  ${API_SECRET}
     depends_on:
       db:
         condition: service_healthy
-
   bot:
     build: .
     restart: always
     command: python bot.py
     environment:
-      DB_HOST:     db
-      DB_PORT:     "5432"
-      DB_NAME:     storeping
-      DB_USER:     storeping_user
-      DB_PASS:     ${DB_PASS}
-      BOT_TOKEN:   ${BOT_TOKEN}
-      API_SECRET:  ${API_SECRET}
-      SUMMARY_HOUR:   "21"
-      SUMMARY_MINUTE: "0"
-      TIMEZONE:    America/Toronto
+      DB_HOST:          db
+      DB_PORT:          "5432"
+      DB_NAME:          relay
+      DB_USER:          relay_user
+      DB_PASS:          ${DB_PASS}
+      BOT_TOKEN:        ${BOT_TOKEN}
+      API_SECRET:       ${API_SECRET}
+      TELEGRAM_GROUP_ID: "-5289768910"
+      SUMMARY_HOUR:     "21"
+      SUMMARY_MINUTE:   "0"
+      TIMEZONE:         Asia/Kolkata
     depends_on:
       db:
         condition: service_healthy
-
 volumes:
   pgdata:
